finalisation contact.html + modification html et css

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     </header>
 
     <main>
-        <article>
-            <section class="jumbotron jumbotron-fluid container">
+        <article class="mr-bot">
+            <section class="jumbotron jumbotron-fluid container ">
                 <h1 class="display-4">Nouvelle recette !</h1>
                 <p class="lead">Venez goûter les nouvelles recette de notre Pizzaïolo</p>
                 <p>Dès à présent dans tout les Let's Pizza!</p>
