--- a/photos.html
+++ b/photos.html
@@ -43,7 +43,8 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social" href="https://facebook.com/">
+                        <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social"
+                            href="https://facebook.com/">
                             <i class="fab fa-facebook-f"></i> Facebook
                         </a>
                     </li>
@@ -59,7 +60,7 @@
     </header>
 
     <main>
-        <article class="container">
+        <article class="container mr-bot">
             <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link active color-nav" id="pills-1-tab" data-toggle="pill" href="#pills-1" role="tab"
@@ -74,7 +75,7 @@
                         aria-controls="pills-contact" aria-selected="false">3</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color-nav" id="pills-4-tab" data-toggle="pill" href="#pills-3" role="tab"
+                    <a class="nav-link color-nav" id="pills-4-tab" data-toggle="pill" href="#pills-4" role="tab"
                         aria-controls="pills-contact" aria-selected="false">4</a>
                 </li>
             </ul>
@@ -84,12 +85,14 @@
                     <img src="assets/img/pizza2.jpg" alt="Pizza02">
                     <img src="assets/img/pizza3.jpg" alt="Pizza03">
                 </div>
-                <div class="tab-pane fade" id="pills-2" role="tabpanel" aria-labelledby="pills-2-tab"><img
-                        src="assets/img/pizza4.jpg" alt="Pizza04"> <img src="assets/img/pizza5.jpg" alt="Pizza05">
+                <div class="tab-pane fade" id="pills-2" role="tabpanel" aria-labelledby="pills-2-tab">
+                    <img src="assets/img/pizza4.jpg" alt="Pizza04">
+                    <img src="assets/img/pizza5.jpg" alt="Pizza05">
                     <img src="assets/img/pizza6.jpg" alt="Pizza06">
                 </div>
                 <div class="tab-pane fade" id="pills-3" role="tabpanel" aria-labelledby="pills-3-tab">
-                    <img src="assets/img/pizza7.jpg" alt="Pizza07"><img src="assets/img/pizza8.jpg" alt="Pizza08">
+                    <img src="assets/img/pizza7.jpg" alt="Pizza07">
+                    <img src="assets/img/pizza8.jpg" alt="Pizza08">
                     <img src="assets/img/pizza9.jpg" alt="Pizza09">
                 </div>
                 <div class="tab-pane fade" id="pills-4" role="tabpanel" aria-labelledby="pills-4-tab">
@@ -104,7 +107,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions
+                    <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="#">Conditions
                             générales</a> - © 2019 Site Web</a></p>
                 </div>
             </div>
