--- a/restaurants.html
+++ b/restaurants.html
@@ -60,7 +60,7 @@
     </header>
 
     <main>
-        <article class="container">
+        <article class="container mr-bot">
             <div class="row justify-content-center">
                 <div class="card mb-3">
                     <iframe
