--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -17,49 +18,84 @@
     <header>
         <!--Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link hover" href="index.html">Accueil
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link hover" href="carte.html">Carte</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link hover" href="photos.html">Photos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link hover" href="restaurants.html">Restaurants</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link hover active" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social" href="https://facebook.com/">
-                                <i class="fab fa-facebook-f"></i> Facebook
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a target="_blank" class="nav-link color-social" href="https://instagram.com/">
-                                <i class="fab fa-instagram"></i> Instagram</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <!--/.Navbar -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link hover" href="index.html">Accueil
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hover" href="carte.html">Carte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hover" href="photos.html">Photos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hover" href="restaurants.html">Restaurants</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hover active" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social"
+                            href="https://facebook.com/">
+                            <i class="fab fa-facebook-f"></i> Facebook
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link color-social" href="https://instagram.com/">
+                            <i class="fab fa-instagram"></i> Instagram</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!--/.Navbar -->
         <p class="title">Let's Pizza !</p>
     </header>
 
     <main>
         <article>
-
+            <div class="container bg-form">
+                <div class="row justify-content-center">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Nom</label>
+                                <input type="text" class="form-control" id="inputName" placeholder="Nom">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputPrenom">Prénom</label>
+                                <input type="text" class="form-control" id="inputPrenom" placeholder="Prénom">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail">Email</label>
+                            <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputState">Objet</label>
+                            <select id="inputState" class="form-control">
+                                <option selected>Choisissez...</option>
+                                <option>Réservation</option>
+                                <option>Renseignement</option>
+                                <option>Autre</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Message</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message"
+                                rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Envoi</button>
+                    </form>
+                </div>
+            </div>
         </article>
     </main>
     <footer>
