--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                             <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message"
                                 rows="3"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Envoi</button>
+                        <button type="submit" class="btn btn-primary"><i class="far fa-paper-plane"></i> Envoyer</button>
                     </form>
                 </div>
             </div>
