--- a/photos.html
+++ b/photos.html
@@ -25,14 +25,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link hover active" href="index.html">Accueil
+                        <a class="nav-link hover" href="index.html">Accueil
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link hover" href="carte.html">Carte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hover" href="photos.html">Photos</a>
+                        <a class="nav-link hover active" href="photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link hover" href="restaurants.html">Restaurants</a>
